# cc7515_t3

./: CMakeLists.txt  README.md
include/: Camera.h  Texture.h  VAO.h  nbody.h  sphere_indices.h  sphere_vertices.h  utils.h
reports/: habits.html  informe.md  old.md  render.sh
resources/: config.json  config_lagrange.json  particles.csv  particles_lagrange.csv
src/: Camera.cpp  EBO.cpp  Main.cpp  Texture.cpp  VAO.cpp  VBO.cpp  config.json  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp  kernel.cu  kernel_1_global-memory_1D.cu  main.cpp  nbody_cpu.cpp  nbody_cuda.cu  particles.csv  ref.cpp  shaderClass.cpp  utils.cpp
src/include/: utils.h
src/include/glad/: gl.h
